fixed some ui an settings on iphone

--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@
 }
 .container {
     width:100%;
-    height:100vh;
+    height:100%;
 }
 body {
 	margin: 0;
@@ -196,8 +196,8 @@ a, button, input, select {
 #loaderPage img {
 	position: inherit;
 	bottom: calc(50% + 30px);
-	width: 400px;
-	left: calc(50% - 200px);
+	width: 350px;
+	left: calc(50% - 175px);
 }
 
 #progressBar {
